Added Javadoc comments and corrected Checkstyle issues for GameEngineTest